# cpp-combat-system

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  main.cpp
src/battle/: BattleManager.cpp  BattleManager.h
src/buff/: AttackBoost.cpp  AttackBoost.h  Buff.cpp  Buff.h  BuffManager.cpp  BuffManager.h  BurnBuff.cpp  BurnBuff.h  DotBuff.cpp  DotBuff.h  DotPercentBuff.cpp  DotPercentBuff.h  PoisonBuff.cpp  PoisonBuff.h  StatModifyBuff.cpp  StatModifyBuff.h  StunBuff.cpp  StunBuff.h
src/combat/: CombatSystem.cpp  CombatSystem.h
src/core/: Types.cpp  Types.h
src/data/: DataLoader.cpp  DataLoader.h  EntityRegistry.h
src/data/config/: buffs.json  skills.json
src/entity/: Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h
src/event/: EventBus.cpp  EventBus.h  Events.h
src/skill/: Fireball.cpp  Fireball.h  Heal.cpp  Heal.h  Skill.cpp  Skill.h  SkillManager.cpp  SkillManager.h
test/: CMakeLists.txt  buff_test.cpp  combat_test.cpp  event_test.cpp  skill_test.cpp
